--- a/Joyce/static/css/style.css
+++ b/Joyce/static/css/style.css
@@ -202,6 +202,10 @@ select {
   }
 }
 
+.btn btn-primary{
+  margin-left: -10px;
+}
+
 /* keyframe animations which will be used to animate the title */
 @keyframes title {
   from {
