--- a/Joyce/Templates/index_test_button.html
+++ b/Joyce/Templates/index_test_button.html
@@ -45,6 +45,9 @@
                             <br>
                             <a href="/weeks" class="btn btn-primary" role="button">US Census</a>
                             <br>
+                            <br>
+                            <a href="/dropdown" class="btn btn-primary" role="button">test</a>
+                            <br>
                           </div>
                 </div>
               </div>
