--- a/Joyce/Templates/index_test.html
+++ b/Joyce/Templates/index_test.html
@@ -35,7 +35,7 @@
               <div class="panel panel-default">
                 <div class="panel-heading">Filter Search</div>
                 <div class="panel-body">
-                  <form action='/weeks' method ='POST' >
+                  <form action='/' method ='POST' >
                     <div class="form-group">
                       <ul class="list-group" id="filters">
                         <li class="filter list-group-item">
