--- a/Joyce/Templates/dropdown.html
+++ b/Joyce/Templates/dropdown.html
@@ -32,6 +32,6 @@
            </p>
         </fieldset>
      </form>
-     <button type="submit" class="btn btn-default" action="/regrplot" value="Submit"></button>
+     <input name="regrplt" method="GET" action="/regrplot" type="submit" class="btn btn-default"  value="Submit"></button>
   </body>
 </html>
