--- a/Joyce/Templates/regression.html
+++ b/Joyce/Templates/regression.html
@@ -5,6 +5,6 @@
     <meta charset = "UTF-8" />
   </head>
   <body>
-      <image src="data:image/png;base64, {{ plot_url }}"></image>
+      <image src="regrplot.png"></image>
     </body>
 </html>
