--- a/Joyce/Templates/index_test_button.html
+++ b/Joyce/Templates/index_test_button.html
@@ -40,13 +40,13 @@
 
                             <br>
                             <br>
-                            <a href="/weeks" class="btn btn-primary" role="button">Education</a>
+                            <a href="/education" class="btn btn-primary" role="button">Education</a>
                             <br>
                             <br>
                             <a href="/weeks" class="btn btn-primary" role="button">US Census</a>
                             <br>
                             <br>
-                            <a href="/dropdown" class="btn btn-primary" role="button">test</a>
+                            <a href="/dropdown" class="btn btn-primary" role="button">Regression</a>
                             <br>
                           </div>
                 </div>
@@ -55,89 +55,14 @@
           </div>
           <div class="col-md-10">
             <div id="plot">
-                <div id="line"></div>
-                <div id="line2"></div>
-                <div id="line3"></div>
-                <div id="line4"></div>
-                <div id="line5"></div>
-              
-                <script>
-                  d3.json('/weeks').then(function(data) {
-                    var layout = { margin: { t: 0 } }
-                    var LINE = document.getElementById('line');
-                    
-                    var layout={
-                      title: 'Average Weeks on NYTBestSeller List',
-                      xaxis:{title:'Year'},
-                      yaxis:{title:'Average Weeks Listing'}
-                  };
-              
-                    Plotly.plot(LINE, data, layout);
-                  
-                });
-              
-                  d3.json('/count').then(function(data) {
-              
-                    var layout2 = { margin: { t: 0 } }
-                    var LINE2 = document.getElementById('line2');
-                    
-                    var layout2={
-                      title: 'Number of Books on NYTBestSeller List by Year',
-                      xaxis:{title:'Year'},
-                      yaxis:{title:'Number of Books'}
-                  };
-                  
-                    Plotly.plot(LINE2, data, layout2)
-              
-                });
-              
-              
-                  d3.json('/review').then(function(data) {
-              
-              var layout3 = { margin: { t: 0 } }
-              var LINE3 = document.getElementById('line3');
-              
-              var layout3={
-                title: 'Average Number of Reviews on Amazon by Year',
-                xaxis:{title:'Year'},
-                yaxis:{title:'Average Number of Reviews'}
-              };
-              
-              Plotly.plot(LINE3, data, layout3)
-              
-              });
-              
-                  d3.json('/rating').then(function(data) {
-              
-              var layout4 = { margin: { t: 0 } }
-              var LINE4 = document.getElementById('line4');
-              
-              var layout4={
-                title: 'Average Book Rating on Amazon by Year',
-                xaxis:{title:'Year'},
-                yaxis:{title:'Average Rating 5/5'}
-              };
-              
-              Plotly.plot(LINE4, data, layout4)
-              
-              });
-              
-                  d3.json('/price').then(function(data) {
-              
-              var layout5 = { margin: { t: 0 } }
-              var LINE5 = document.getElementById('line5');
-              
-              var layout5={
-                title: 'Average Price on Amazon by Year',
-                xaxis:{title:'Year'},
-                yaxis:{title:'Average Price $'}
-              };
-              
-              Plotly.plot(LINE5, data, layout5)
-              
-              });
-              
-                </script>
+                <h2 target="/book">NYTBestSeller and Amazon Data</h2>
+                <a href="/book"></a>
+                <img class="NYTBestSeller" src="https://static01.nyt.com/images/2019/01/14/reader-center/explainers-bestsellers/explainers-bestsellers-articleLarge.jpg?quality=75&auto=webp&disable=upscale" alt="NYTBestSeller and Amazon Data" target="/book"/>
+                <h2>Education Data</h2>
+                <img src="https://www.evolvedigitas.com/blog/wp-content/uploads/2018/04/education.jpg">
+                <h2>US Census Data</h2>
+                <img src="https://update.lib.berkeley.edu/wp-content/uploads/2016/05/census-logo.png">
+                
             </div>
           </div>
         </div>
