--- a/Joyce/Templates/dropdown.html
+++ b/Joyce/Templates/dropdown.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <h1>Form Demo</h1>
-    <form action="/dropdown_x">
+    <form name="var1" action="/dropdown_x">
        <fieldset>
-          <legend>Selecting elements</legend>
+          <legend>Table Variable 1</legend>
           <p>
-             <label>Select list</label>
+             <label>Select</label>
              <select name="df_variable1">
                 {% for each in dropdown_fields %}
                   <option value="{{each}}">{{each}}</option>
@@ -19,11 +19,11 @@
           </p>
        </fieldset>
     </form>
-    <form action="/dropdown_y">
+    <form name = "var2" action="/dropdown_y">
         <fieldset>
-           <legend>Selecting elements</legend>
+           <legend>Table Variable 2</legend>
            <p>
-              <label>Select list</label>
+              <label>Select</label>
               <select name="df_variable2">
                  {% for each in dropdown_fields %}
                    <option value="{{each}}">{{each}}</option>
@@ -31,7 +31,8 @@
                  </select>
            </p>
         </fieldset>
+        <button><input name="regrplt" method="GET" action="/regrplot" type="submit" class="btn btn-default"  value="Submit"></button>     
      </form>
-     <input name="regrplt" method="GET" action="/regrplot" type="submit" class="btn btn-default"  value="Submit"></button>
+     
   </body>
 </html>
