--- a/Joyce/Templates/index_test_button.html
+++ b/Joyce/Templates/index_test_button.html
@@ -43,7 +43,7 @@
                             <a href="/education" class="btn btn-primary" role="button">Education</a>
                             <br>
                             <br>
-                            <a href="/weeks" class="btn btn-primary" role="button">US Census</a>
+                            <a href="/census" class="btn btn-primary" role="button">US Census</a>
                             <br>
                             <br>
                             <a href="/dropdown" class="btn btn-primary" role="button">Regression</a>
