fixed index_test_button_census line ids

--- a/Joyce/Templates/index_test_button_census.html
+++ b/Joyce/Templates/index_test_button_census.html
@@ -57,13 +57,13 @@
               <p>Collected data includes Population in Poverty, Population Employed, Estimated Mean Income, Property Valuation, Population</p>
                 <br>
               <div id="line1_c"></div>
-                <div id="line2"></div>
+                <div id="line2_c"></div>
                 <p> First plot</p>
-                <div id="line3"></div>
+                <div id="line3_c"></div>
                 <p>Second Plot</p>
-                <div id="line4"></div>
+                <div id="line4_c"></div>
                 <p>Third Plot</p>
-                <div id="line5"></div>
+                <div id="line5_c"></div>
                 <p>Fourth Plot</p>
               
                 <script>
