dropdown.html updated

--- a/Joyce/Templates/dropdown.html
+++ b/Joyce/Templates/dropdown.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Form Demo</h1>
-    <form name="var1" action="/dropdown_x">
+    <form name="var1" action="/dropdown_x", method="post">
        <fieldset>
           <legend>Table Variable 1</legend>
           <p>
@@ -19,7 +19,7 @@
           </p>
        </fieldset>
     </form>
-    <form name = "var2" action="/dropdown_y">
+    <form name = "var2" action="/dropdown_y", method="post">
         <fieldset>
            <legend>Table Variable 2</legend>
            <p>
