--- a/Joyce/Templates/dropdown.html
+++ b/Joyce/Templates/dropdown.html
@@ -10,8 +10,8 @@
    <link rel="stylesheet" href="static/css/style.css">
   </head>
   <body>
-    <h1>Form Demo</h1>
-    <form name="var1" , method="get">
+    <h1>Variable Selection for Regression Analysis</h1>
+    <form name="var1" , action = "/regrplot" method="get">
        <fieldset class="form-group">
           <legend>Table Variable 1</legend>
           <p>
@@ -35,7 +35,7 @@
                 </select>
           </p>
        </fieldset>
-       <button><input name="regrplt" method="GET" action="/regrplot" type="submit" class="btn btn-default"  value="Submit"></button>      
+       <button><input name="regrplt" method="GET" type="submit" class="btn btn-default"  value="Submit"></button>      
      </form>
      
   </body>
